<resources>
    <string name="app_name">KIDDo</string>
    <string name="name">KISHOWLOY DATTA</string>
    <string name="name1"> ULLASH BHATTACHARJEE </string>
    <string name="name2"> SADIA KHANAM ARNI</string>
    <string name="mail">kishowloydatta016@gmail.com</string>
    <string name="mail1">turja997@gmail.com</string>
    <string name="mail2"> sadiakhanamarni111@gmail.com</string>
</resources>
