<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/custom_background"
    android:orientation="vertical"
    tools:context=".About_Activity">

    <ImageView
        android:id="@+id/image1"
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_gravity="top"
        android:layout_marginStart="100dp"
        android:layout_marginTop="50dp"
        android:src="@drawable/kiddo" />
    <TextView
        android:id="@+id/txt1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="98dp"
        android:layout_marginTop="210dp"
        android:text="A KID'S LEARNING APP"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="160dp"
        android:layout_marginTop="230dp"
        android:text="Version 1.0"
        android:textSize="18dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="290dp"
        android:text="Project By:"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="320dp"
        android:text="@string/name"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="345dp"
        android:text="@string/name1"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="370dp"
        android:text="@string/name2"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt7"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginTop="420dp"
        android:text="Contact us-"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="450dp"
        android:text="@string/mail"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="475dp"
        android:text="@string/mail1"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>
    <TextView
        android:id="@+id/txt10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="95dp"
        android:layout_marginTop="500dp"
        android:text="@string/mail2"
        android:textSize="20dp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"/>

</RelativeLayout>